--- a/about.html
+++ b/about.html
@@ -2390,7 +2390,7 @@ pre[class*="language-"] {
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/index.html">Schrödinger Equation Solver</a>
+          <a class="navbar-brand" href="https://integraloftheday.github.io/WaveFunctionSolver/index.html">Schrödinger Equation Solver</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -2400,7 +2400,7 @@ pre[class*="language-"] {
                 <a class="nav-link" aria-current="page" onclick="on()">Settings</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about.html">About</a>
+                <a class="nav-link" href="https://integraloftheday.github.io/WaveFunctionSolver/about.html">About</a>
               </li>
             </ul>
           </div>
